--- a/MyEventPlanner/app/src/main/res/menu/activity_main_drawer.xml
+++ b/MyEventPlanner/app/src/main/res/menu/activity_main_drawer.xml
@@ -3,23 +3,26 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:showIn="navigation_view">
 
-    <group android:checkableBehavior="single">
+    <group
+        android:id="@+id/nav_group_1"
+        android:checkableBehavior="single">
         <item
-            android:id="@+id/nav_camera"
-            android:icon="@drawable/ic_menu_camera"
-            android:title="@string/nav_drawer_buttons_import" />
+            android:id="@+id/nav_start"
+            android:icon="@drawable/ic_menu_start"
+            android:title="@string/nav_drawer_main" />
+    </group>
+
+    <group
+        android:id="@+id/nav_group_2"
+        android:checkableBehavior="single">
         <item
-            android:id="@+id/nav_gallery"
-            android:icon="@drawable/ic_menu_gallery"
-            android:title="@string/nav_drawer_buttons_gallery" />
+            android:id="@+id/nav_upcoming"
+            android:icon="@drawable/ic_menu_upcoming"
+            android:title="@string/nav_drawer_upcoming" />
         <item
-            android:id="@+id/nav_slideshow"
-            android:icon="@drawable/ic_menu_slideshow"
-            android:title="@string/nav_drawer_buttons_slideshow" />
-        <item
-            android:id="@+id/nav_manage"
-            android:icon="@drawable/ic_menu_manage"
-            android:title="@string/nav_drawer_buttons_tools" />
+            android:id="@+id/nav_holiday"
+            android:icon="@drawable/ic_menu_holiday"
+            android:title="@string/nav_drawer_holidays" />
     </group>
 
 </menu>
