--- a/MyEventPlanner/app/src/main/res/values/colors.xml
+++ b/MyEventPlanner/app/src/main/res/values/colors.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorPrimary">#362a32</color>
+    <color name="colorPrimaryDark">#161114</color>
+    <color name="colorPrimaryLight">#362a2f</color>
+    <color name="colorAccent">#5D2027</color>
 </resources>
