--- a/MyEventPlanner/app/src/main/res/layout/fragment_event_details.xml
+++ b/MyEventPlanner/app/src/main/res/layout/fragment_event_details.xml
@@ -158,27 +158,57 @@
             </LinearLayout>
 
             <LinearLayout
-                android:id="@+id/deleteLayout"
+                android:id="@+id/footerLayout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="15dp"
                 android:layout_marginLeft="16dp"
                 android:layout_marginRight="16dp"
                 android:layout_marginTop="5dp"
-                android:gravity="right"
-                android:orientation="vertical">
+                android:orientation="horizontal">
 
-                <Button
-                    android:id="@+id/button_event_delete"
-                    style="@android:style/Widget.Button"
-                    android:layout_width="140dp"
-                    android:layout_height="25dp"
-                    android:background="@color/colorAccent"
-                    android:elevation="0dp"
-                    android:fontFamily="sans-serif-medium"
-                    android:text="@string/event_delete"
-                    android:textColor="#fff"
-                    android:textSize="12sp" />
+                <LinearLayout
+                    android:id="@+id/createdLayout"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:id="@+id/textView_event_created_general"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="@string/event_created"
+                        android:textSize="10sp" />
+
+                    <TextView
+                        android:id="@+id/textView_event_created"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:textSize="12sp"
+                        tools:text="15.08.2018." />
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:id="@+id/buttonLayout"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
+
+                    <Button
+                        android:id="@+id/button_event_delete"
+                        style="@android:style/Widget.Button"
+                        android:layout_width="wrap_content"
+                        android:layout_height="30dp"
+                        android:background="@color/colorAccent"
+                        android:elevation="0dp"
+                        android:fontFamily="sans-serif-medium"
+                        android:text="@string/event_delete"
+                        android:textColor="#fff"
+                        android:textSize="12sp" />
+                </LinearLayout>
+
             </LinearLayout>
 
         </LinearLayout>
