Added implementation of birthdays, other and upcoming events
- added implementation of birthdays, other and upcoming events (both business logic and design)
- added small changes in code where necessary

--- a/MyEventPlanner/app/src/main/res/menu/activity_main_drawer.xml
+++ b/MyEventPlanner/app/src/main/res/menu/activity_main_drawer.xml
@@ -23,6 +23,14 @@
             android:id="@+id/nav_holiday"
             android:icon="@drawable/ic_menu_holiday"
             android:title="@string/nav_drawer_holidays" />
+        <item
+            android:id="@+id/nav_birthday"
+            android:icon="@drawable/ic_menu_birthday"
+            android:title="@string/nav_drawer_birthday" />
+        <item
+            android:id="@+id/nav_other"
+            android:icon="@drawable/ic_menu_other_events"
+            android:title="@string/nav_drawer_other" />
     </group>
 
 </menu>
