--- a/MyEventPlanner/app/src/main/res/layout/fab_add.xml
+++ b/MyEventPlanner/app/src/main/res/layout/fab_add.xml
@@ -12,7 +12,7 @@
             android:id="@+id/fab_event"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:srcCompat="@drawable/ic_add_white"
+            android:src="@drawable/ic_add_white"
             android:layout_gravity="bottom|right"
             app:backgroundTint="@color/colorPrimary"
             app:fabSize="normal"
