--- a/MyEventPlanner/app/src/main/res/layout/fragment_add_new_event.xml
+++ b/MyEventPlanner/app/src/main/res/layout/fragment_add_new_event.xml
@@ -66,6 +66,7 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:paddingLeft="5dp"
+                        android:paddingRight="5dp"
                         android:text="@string/add_event_tip"
                         android:textSize="11sp"
                         android:textStyle="italic" />
