--- a/MyEventPlanner/app/src/main/res/layout/event_list_item.xml
+++ b/MyEventPlanner/app/src/main/res/layout/event_list_item.xml
@@ -28,15 +28,15 @@
             android:id="@+id/layoutTop">
 
             <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
                 android:id="@+id/textView_event_name"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:textAlignment="center"
-                android:textSize="25sp"
-                tools:text="EVENT"
                 android:textColor="#ffffff"
-                android:textStyle="normal|bold" />
+                android:textSize="25sp"
+                android:textStyle="normal|bold"
+                tools:text="EVENT" />
         </LinearLayout>
 
         <LinearLayout
