--- a/MyEventPlanner/app/src/main/res/layout/fab_add.xml
+++ b/MyEventPlanner/app/src/main/res/layout/fab_add.xml
@@ -12,11 +12,12 @@
             android:id="@+id/fab_event"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/ic_add_white"
             android:layout_gravity="bottom|right"
+            android:layout_margin="@dimen/fab_margin"
+            android:src="@drawable/ic_add_white"
             app:backgroundTint="@color/colorPrimary"
-            app:fabSize="normal"
-            app:elevation="5dp" />
+            app:elevation="5dp"
+            app:fabSize="normal" />
     </android.support.design.widget.CoordinatorLayout>
 
 </LinearLayout>
