--- a/MyEventPlanner/app/src/main/res/layout/fragment_add_new_event.xml
+++ b/MyEventPlanner/app/src/main/res/layout/fragment_add_new_event.xml
@@ -13,66 +13,56 @@
         android:id="@+id/layoutsHolder">
 
         <LinearLayout
-            android:orientation="horizontal"
+            android:id="@+id/mainLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/mainLayout"
+            android:layout_marginBottom="10dp"
             android:layout_marginLeft="30dp"
-            android:layout_marginRight="30dp">
+            android:layout_marginRight="30dp"
+            android:layout_marginTop="10dp"
+            android:orientation="vertical">
 
-            <LinearLayout
-                android:orientation="vertical"
+            <android.support.design.widget.TextInputLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:id="@+id/editLayout"
-                android:gravity="top"
-                android:layout_marginTop="10dp"
-                android:layout_marginBottom="20dp">
+                android:layout_height="wrap_content">
 
-                <android.support.design.widget.TextInputLayout
+                <EditText
+                    android:id="@+id/editText_add_event_name"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:ems="10"
+                    android:hint="@string/add_event_name"
+                    android:inputType="textPersonName"
+                    android:textSize="20sp" />
+            </android.support.design.widget.TextInputLayout>
 
-                    <EditText
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:inputType="textPersonName"
-                        android:ems="10"
-                        android:id="@+id/editText_add_event_name"
-                        android:hint="@string/add_event_name"
-                        android:textSize="20sp"
-                        android:layout_weight="1" />
-                </android.support.design.widget.TextInputLayout>
+            <android.support.design.widget.TextInputLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
 
-                <android.support.design.widget.TextInputLayout
+                <EditText
+                    android:id="@+id/editText_add_event_date"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:ems="10"
+                    android:hint="@string/add_event_date"
+                    android:inputType="date"
+                    android:paddingTop="15dp"
+                    android:textSize="20sp" />
 
-                    <EditText
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:inputType="date"
-                        android:ems="10"
-                        android:id="@+id/editText_add_event_date"
-                        android:hint="@string/add_event_date"
-                        android:paddingTop="15dp"
-                        android:textSize="20sp"
-                        android:layout_weight="1" />
-
-                    <TextView
-                        android:id="@+id/textView_new_event_tip"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:paddingLeft="5dp"
-                        android:paddingRight="5dp"
-                        android:text="@string/add_event_tip"
-                        android:textSize="11sp"
-                        android:textStyle="italic" />
-                </android.support.design.widget.TextInputLayout>
-
-            </LinearLayout>
+                <TextView
+                    android:id="@+id/textView_new_event_tip"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:paddingLeft="5dp"
+                    android:paddingRight="5dp"
+                    android:text="@string/add_event_tip"
+                    android:textSize="11sp"
+                    android:textStyle="italic" />
+            </android.support.design.widget.TextInputLayout>
 
         </LinearLayout>
 
@@ -86,16 +76,16 @@
             android:gravity="right">
 
             <Button
-                android:text="@string/add_event_add"
                 android:id="@+id/button_add_event"
+                style="@style/Widget.AppCompat.Button"
+                android:layout_width="150dp"
+                android:layout_height="35dp"
                 android:layout_weight="1"
                 android:background="@color/colorPrimary"
-                style="@style/Widget.AppCompat.Button"
-                android:textColor="#fff"
-                android:textStyle="normal|bold"
+                android:text="@string/add_event_add"
                 android:textAllCaps="false"
-                android:layout_height="35dp"
-                android:layout_width="150dp" />
+                android:textColor="#fff"
+                android:textStyle="normal|bold" />
         </LinearLayout>
 
     </LinearLayout>
