Added design for login activity and registration fragment
- added design for login activity and registration fragment
- added initial classes for login and registration - todo: business logic
- added User entity

--- a/MyEventPlanner/app/src/main/res/menu/activity_main_drawer.xml
+++ b/MyEventPlanner/app/src/main/res/menu/activity_main_drawer.xml
@@ -33,4 +33,16 @@
             android:title="@string/nav_drawer_other" />
     </group>
 
+    <item android:title="@string/nav_drawer_user_options">
+        <menu>
+            <item
+                android:id="@+id/nav_login"
+                android:title="@string/nav_drawer_login" />
+            <item
+                android:id="@+id/nav_reg"
+                android:title="@string/nav_drawer_registration" />
+
+        </menu>
+    </item>
+
 </menu>
