Added design for User activity and PersonalEvents fragment
- added design and initial classes for User activity and PersonalEvents fragment - todo: business logic

--- a/MyEventPlanner/app/src/main/res/layout/nav_header_main.xml
+++ b/MyEventPlanner/app/src/main/res/layout/nav_header_main.xml
@@ -21,13 +21,14 @@
         app:srcCompat="@mipmap/logo_icon" />
 
     <TextView
+        android:id="@+id/textView_header_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/nav_header_title"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/textView_header_subtitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/nav_header_subtitle" />
