Updated TemplateDataService and its unit test
- updated TemplateDataService (now only loads all event data into db instead of returning specific type of events)
- updated unit test for TemplateDataService
- added few changes in code where necessary (android lint fixes)

--- a/MyEventPlanner/app/src/main/res/layout/activity_login.xml
+++ b/MyEventPlanner/app/src/main/res/layout/activity_login.xml
@@ -32,7 +32,8 @@
                 android:cropToPadding="false"
                 android:elevation="24dp"
                 android:scaleType="fitCenter"
-                app:srcCompat="@drawable/logo_icon_hi_res" />
+                app:srcCompat="@mipmap/logo_icon_hi_res"
+                android:contentDescription="@string/image_default_desc"/>
 
         </LinearLayout>
 
