--- a/MyEventPlanner/app/src/main/res/layout/fragment_registration.xml
+++ b/MyEventPlanner/app/src/main/res/layout/fragment_registration.xml
@@ -47,7 +47,8 @@
                 android:layout_gravity="center"
                 android:layout_width="match_parent"
                 android:layout_marginTop="5dp"
-                android:layout_marginBottom="5dp" />
+                android:layout_marginBottom="5dp"
+                android:contentDescription="@string/image_default_desc"/>
 
             <EditText
                 android:layout_width="match_parent"
@@ -106,7 +107,8 @@
                 android:layout_gravity="center"
                 android:layout_width="match_parent"
                 android:layout_marginTop="5dp"
-                android:layout_marginBottom="5dp" />
+                android:layout_marginBottom="5dp"
+                android:contentDescription="@string/image_default_desc"/>
         </LinearLayout>
 
         <LinearLayout
